--- a/internal/report/template.html
+++ b/internal/report/template.html
@@ -182,6 +182,11 @@
                 <td class="desc">Password Reuse Stats</td>
                 <td class="more-info"><a href="javascript:toggleDetails('details-reuse')">Details</a></td>
             </tr>
+            <tr>
+                <td>{{len .Stats.TopBaseWords}}</td>
+                <td class="desc">Top Base Words Stats</td>
+                <td class="more-info"><a href="javascript:toggleDetails('details-basewords')">Details</a></td>
+            </tr>
 
             <!-- Graph Stats -->
             {{range $index, $entry := .Stats.ReportEntries}}
@@ -263,6 +268,22 @@
                     <th>Count</th>
                 </tr>
                 {{range .Stats.PasswordReuse}}
+                <tr>
+                    <td>{{.Key | obfuscate}}</td>
+                    <td>{{.Value}}</td>
+                </tr>
+                {{end}}
+            </table>
+        </div>
+
+        <div id="details-basewords" style="display:none; margin-top:20px;">
+            <h3>Top Base Words</h3>
+            <table>
+                <tr>
+                    <th>Base Word</th>
+                    <th>Count</th>
+                </tr>
+                {{range .TopBaseWords}}
                 <tr>
                     <td>{{.Key | obfuscate}}</td>
                     <td>{{.Value}}</td>
